# devsecops-simple

./: .gitignore  README.md  bootstrap.yml  destroy.yml
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yml
app/: .dockerignore  Dockerfile  pyproject.toml  pytest.toml
app/src/: main.py
app/tst/: test_main.py
k8s/: argocd-app.yml  deployment.yml
setup/: sys_wsl.yml
terraform/: main.tf
