[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dummy-app"
version = "1.0.0"
description = "DevOps Lab FastAPI Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
